# SourceFolio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  setup.py
fetchers/: news_api.py  openlibrary_api.py  wikipedia_function.py
processing/: config.py  csv_exporter.py  pdf_exporter.py  ui.py  utils.py
src/: main.py
src/fetchers/: news_api.py  openlibrary_api.py  wikipedia_function.py
src/processing/: csv_exporter.py  keyword_data_structure.json  keyword_data_structure.txt  pdf_exporter.py  ui.py  utils.py
tests/: test_log.md
