[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcefolio"
# You must bump the version to upload a fix
version = "1.0.6"
authors = [
  { name="shakeelsaga", email="shakeelmohammedofficial@gmail.com" },
]
description = "A CLI tool to automate research by fetching data from multiple sources and exporting to PDF/CSV."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "rich",
    "inquirerpy",
    "typer[all]",
    "wikipedia",
    "requests",
    "python-dotenv",
    "reportlab",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/shakeelsaga/SourceFolio"
Issues = "https://github.com/shakeelsaga/SourceFolio/issues"
icon = "https://cdn.jsdelivr.net/gh/shakeelsaga/SourceFolio@main/.assets/SourceFolio-Logo.png"

[project.scripts]
sourcefolio = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["fetchers", "processing"]
